[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-tool-gateway"
version = "0.1.0"
description = "Bootstrap Codex against a Databricks workspace with minimal setup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "databricks-sql-connector>=3.6.0",
]

[project.scripts]
coding-tool-gateway = "coding_tool_gateway.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
